--- a/rocket.html
+++ b/rocket.html
@@ -7,28 +7,27 @@
 </head>
 <body class="body-state1">
 	<div class="left">
-<div class="state1">
-	<h1>Js Rocket Launch!</h1>
+<div class="interface state1">
+	<h1>Deimuko Svajonės</h1>
 	<a href="#" class="button"
-	onclick="changeState(2);">Launch!</a>
+	onclick="changeState(2);">Varom!</a>
 </div>
-<div class="state2">
+<div class="interface state2">
 	<h1 id="countdown">10</h1>
-	<a href="#" class="button"
-	onclick="changeState(1);">Abort!</a>
+	<a href="#" onclick="changeState(1);">ATGAL!</a>
 </div>
-<div class="state3">
-	<h1>Lift Off!</h1>
+<div class="interface state3">
+	<h1>Svajone Lik Sveika!</h1>
 </div>
-<div class="state4">
-	<h1>Well Done!</h1>
+<div class="interface state4">
+	<h1>Ate Ate!</h1>
 	<a href="#" class="button"
-	onclick="changeState(1);">Do It Again!</a>
+	onclick="changeState(1);">ATGAL!</a>
 </div>
-<div class="state5">
-	<h1>Oh No!!!</h1>
+<div class="interface state5">
+	<h1>Uffff...</h1>
 	<a href="#" class="button"
-	onclick="changeState(1);">Try Again!</a>
+	onclick="changeState(1);">ATGAL!</a>
 	</div>
 	<div class="right">
 		<div class="ground"></div>
