--- a/rocket.html
+++ b/rocket.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Rocket Lauch Sequense!</title> 
+	<title>Deimuko Svajones!</title> 
 	<link rel="stylesheet" type="text/css" href="css/rocket.css">
 	<script type="text/javascript" src="js/rocket.js"></script>
 </head>
